--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -241,9 +241,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dm12"
         android:textAllCaps="false"
+        android:textAlignment="textEnd"
+        app:layout_constraintHorizontal_weight="3"
         android:textSize="@dimen/ln13"
         android:text="@string/you_are_search"
-        app:layout_constraintBottom_toBottomOf="@id/track_group9"
+        app:layout_constraintBottom_toBottomOf="@id/track_group11"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/track_group11"
         />
@@ -253,6 +255,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dm28"
+        app:layout_constraintHorizontal_weight="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
         android:textAllCaps="false"
