--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,118 +1,269 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".PlayerActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.066" />
-
-    <ImageButton
-        android:id="@+id/back_button"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dm12"
-        android:background="@null"
-        android:contentDescription="@string/null_string"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintEnd_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_back" />
-
-    <ImageView
-        android:id="@+id/cover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:contentDescription="@string/null_string"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="2:3"
-        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/back_button"
-        app:srcCompat="@drawable/album_3x"
-        />
-
-    <TextView
-        android:id="@+id/track_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dm24"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/cover"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln22"
-        android:text="@string/you_are_search"
-        />
-
-    <TextView
-        android:id="@+id/track_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dm12"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/track_name"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln14"
-        android:text="@string/you_are_search"
-        />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/buttonGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="back_button2, back_button3, back_button4" />
-
-    <ImageButton
-        android:id="@+id/back_button2"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dm12"
-        android:background="@null"
-        android:contentDescription="@string/null_string"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/track_group"
-        app:srcCompat="@drawable/arrow_back" />
-
-    <ImageButton
-        android:id="@+id/back_button3"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:contentDescription="@string/null_string"
-        android:padding="@dimen/dm12"
-        app:lay="@+id/back_button2"
-        app:layout_constraintEnd_toEndOf="@+id/back_button2"
-        app:layout_constraintLeft_toRightOf="@+id/back_button2"
-        app:srcCompat="@drawable/arrow_back" />
-
-    <ImageButton
-        android:id="@+id/back_button4"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dm12"
-        android:background="@null"
-        android:contentDescription="@string/null_string"
-        app:layout_constraintStart_toStartOf="@+id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/track_group"
-        app:srcCompat="@drawable/arrow_back" />
+        app:layout_constraintGuide_begin="@dimen/dm24" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.934" />
+        app:layout_constraintGuide_end="@dimen/dm24" />
+
+    <ImageButton
+        android:id="@+id/back_button"
+        style="@style/BackButtonImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="@string/null_string"
+        android:padding="@dimen/dm12"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/arrow_back" />
+
+    <ImageView
+        android:id="@+id/cover"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="@dimen/dm24"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@id/track_name"
+        app:layout_constraintDimensionRatio="w, 1:1"
+        app:layout_constraintEnd_toEndOf="@id/right_guideline"
+        app:layout_constraintStart_toStartOf="@id/left_guideline"
+        app:layout_constraintTop_toBottomOf="@id/back_button"
+        tools:src="@drawable/album_3x" />
+
+    <TextView
+        android:id="@+id/track_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:layout_marginBottom="@dimen/dm12"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln22"
+        app:layout_constraintBottom_toTopOf="@+id/track_group"
+        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline" />
+
+    <TextView
+        android:id="@+id/track_group"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:layout_marginBottom="@dimen/dm30"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln14"
+        app:layout_constraintBottom_toTopOf="@+id/add_to_track2"
+        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline" />
+
+    <ImageButton
+        android:id="@+id/add_to_track"
+        style="@style/BackButtonImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="@null"
+
+        app:layout_constraintBottom_toBottomOf="@+id/add_to_track2"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
+        app:layout_constraintTop_toTopOf="@+id/add_to_track2"
+        app:srcCompat="@drawable/playlist_add_up" />
+
+    <ImageButton
+        android:id="@+id/add_to_track2"
+        style="@style/BackButtonImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="@string/null_string"
+        android:layout_marginBottom="@dimen/dm4"
+        app:layout_constraintBottom_toTopOf="@+id/duration"
+        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
+        app:srcCompat="@drawable/play_dark" />
+
+    <ImageButton
+        android:id="@+id/add_to_track3"
+        style="@style/BackButtonImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="@string/null_string"
+        app:layout_constraintBottom_toBottomOf="@+id/add_to_track2"
+        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintTop_toTopOf="@+id/add_to_track2"
+        app:srcCompat="@drawable/like_up" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/buttonGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dm12"
+        android:visibility="visible"
+        app:constraint_referenced_ids="add_to_track, add_to_track2, add_to_track3" />
+
+    <TextView
+        android:id="@+id/duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm28"
+        android:text="@string/you_are_search"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln14"
+        app:layout_constraintBottom_toBottomOf="@+id/timeline_title"
+        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline" />
+
+    <TextView
+        android:id="@+id/timeline_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm16"
+        android:ellipsize="end"
+        android:fontFamily="@font/ys_medium"
+        android:maxLines="1"
+        android:text="@string/you_are_search"
+        android:textAlignment="textStart"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/ln13"
+        app:layout_constraintBottom_toTopOf="@id/album_title"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintEnd_toStartOf="@id/timeline"
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
+
+    <TextView
+        android:id="@+id/timeline"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:textAlignment="textEnd"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln15"
+        app:layout_constraintBottom_toBottomOf="@id/timeline_title"
+        app:layout_constraintEnd_toEndOf="@id/right_guideline"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintStart_toEndOf="@id/timeline_title" />
+
+    <TextView
+        android:id="@+id/album_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm16"
+        android:text="@string/you_are_search"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln13"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/year_title"
+        app:layout_constraintStart_toStartOf="@id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/album"
+        />
+
+    <TextView
+        android:id="@+id/album"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:textAlignment="textEnd"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/album_title"
+        app:layout_constraintEnd_toEndOf="@id/right_guideline"
+        app:layout_constraintStart_toEndOf="@id/album_title" />
+
+    <TextView
+        android:id="@+id/year_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm16"
+        android:text="@string/you_are_search"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln13"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/genre_title"
+        app:layout_constraintStart_toStartOf="@id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/year"
+        />
+
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:textAlignment="textEnd"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/year_title"
+        app:layout_constraintEnd_toEndOf="@id/right_guideline"
+        app:layout_constraintStart_toEndOf="@id/year_title" />
+
+    <TextView
+        android:id="@+id/genre_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm16"
+        android:text="@string/you_are_search"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln13"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/country_title"
+        app:layout_constraintStart_toStartOf="@id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/genre"
+        />
+
+    <TextView
+        android:id="@+id/genre"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:textAlignment="textEnd"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/genre_title"
+        app:layout_constraintEnd_toEndOf="@id/right_guideline"
+        app:layout_constraintStart_toEndOf="@id/genre_title" />
+
+    <TextView
+        android:id="@+id/country_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm28"
+        android:text="@string/you_are_search"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln13"
+        app:layout_constraintEnd_toStartOf="@id/country"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
+
+    <TextView
+        android:id="@+id/country"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_search"
+        android:textAlignment="textEnd"
+        android:textAllCaps="false"
+        android:textSize="@dimen/ln15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/country_title"
+        app:layout_constraintEnd_toEndOf="@id/right_guideline"
+        app:layout_constraintStart_toEndOf="@id/country_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
