--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -65,7 +65,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/dm24"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView style="@style/historySearchTextStyly" />
 
