--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -22,26 +22,14 @@
 
     <ImageButton
         android:id="@+id/back_button"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:contentDescription="@string/null_string"
-        android:padding="@dimen/dm12"
+        style="@style/backButton"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_back" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/cover"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginBottom="@dimen/dm24"
-        android:scaleType="centerCrop"
+        style="@style/coverImage"
         app:layout_constraintBottom_toTopOf="@id/track_name"
-        app:layout_constraintDimensionRatio="w, 1:1"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/back_button"
@@ -49,36 +37,21 @@
 
     <TextView
         android:id="@+id/track_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:layout_marginBottom="@dimen/dm12"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln22"
+        style="@style/trackNameStyle"
         app:layout_constraintBottom_toTopOf="@+id/track_group"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guideline" />
 
     <TextView
         android:id="@+id/track_group"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:layout_marginBottom="@dimen/dm30"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln14"
+        style="@style/groupNameStyle"
         app:layout_constraintBottom_toTopOf="@+id/add_to_track2"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guideline" />
 
     <ImageButton
         android:id="@+id/add_to_track"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:contentDescription="@null"
-
+        style="@style/roundButtonStyle"
         app:layout_constraintBottom_toBottomOf="@+id/add_to_track2"
         app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toTopOf="@+id/add_to_track2"
@@ -89,9 +62,9 @@
         style="@style/BackButtonImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dm4"
         android:background="@null"
         android:contentDescription="@string/null_string"
-        android:layout_marginBottom="@dimen/dm4"
         app:layout_constraintBottom_toTopOf="@+id/duration"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guideline"
@@ -99,171 +72,92 @@
 
     <ImageButton
         android:id="@+id/add_to_track3"
-        style="@style/BackButtonImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:contentDescription="@string/null_string"
+        style="@style/roundButtonStyle"
         app:layout_constraintBottom_toBottomOf="@+id/add_to_track2"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
         app:layout_constraintTop_toTopOf="@+id/add_to_track2"
         app:srcCompat="@drawable/like_up" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/buttonGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dm12"
-        android:visibility="visible"
-        app:constraint_referenced_ids="add_to_track, add_to_track2, add_to_track3" />
-
     <TextView
         android:id="@+id/duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dm28"
-        android:text="@string/you_are_search"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln14"
+        style="@style/timelineStyle"
         app:layout_constraintBottom_toBottomOf="@+id/timeline_title"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guideline" />
 
     <TextView
         android:id="@+id/timeline_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dm16"
-        android:ellipsize="end"
-        android:fontFamily="@font/ys_medium"
-        android:maxLines="1"
-        android:text="@string/you_are_search"
-        android:textAlignment="textStart"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/ln13"
+        style="@style/allTitleStyle"
         app:layout_constraintBottom_toTopOf="@id/album_title"
-        app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toStartOf="@id/timeline"
         app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <TextView
         android:id="@+id/timeline"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:textAlignment="textEnd"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln15"
+        style="@style/allEndTitleStyle"
         app:layout_constraintBottom_toBottomOf="@id/timeline_title"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
-        app:layout_constraintHorizontal_weight="7"
-        app:layout_constraintStart_toEndOf="@id/timeline_title" />
+        app:layout_constraintStart_toEndOf="@id/timeline_title"
+        app:layout_constraintTop_toTopOf="@+id/timeline_title" />
 
     <TextView
         android:id="@+id/album_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dm16"
-        android:text="@string/you_are_search"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln13"
-        app:layout_constraintHorizontal_weight="3"
+        style="@style/allTitleStyle"
         app:layout_constraintBottom_toTopOf="@id/year_title"
-        app:layout_constraintStart_toStartOf="@id/left_guideline"
         app:layout_constraintEnd_toStartOf="@id/album"
-        />
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <TextView
         android:id="@+id/album"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:textAlignment="textEnd"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln15"
-        app:layout_constraintHorizontal_weight="7"
+        style="@style/allEndTitleStyle"
         app:layout_constraintBottom_toBottomOf="@id/album_title"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
-        app:layout_constraintStart_toEndOf="@id/album_title" />
+        app:layout_constraintStart_toEndOf="@id/album_title"
+        app:layout_constraintTop_toTopOf="@+id/album_title" />
 
     <TextView
         android:id="@+id/year_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dm16"
-        android:text="@string/you_are_search"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln13"
-        app:layout_constraintHorizontal_weight="3"
+        style="@style/allTitleStyle"
         app:layout_constraintBottom_toTopOf="@id/genre_title"
-        app:layout_constraintStart_toStartOf="@id/left_guideline"
         app:layout_constraintEnd_toStartOf="@id/year"
-        />
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <TextView
         android:id="@+id/year"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:textAlignment="textEnd"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln15"
-        app:layout_constraintHorizontal_weight="7"
+        style="@style/allEndTitleStyle"
         app:layout_constraintBottom_toBottomOf="@id/year_title"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
-        app:layout_constraintStart_toEndOf="@id/year_title" />
+        app:layout_constraintStart_toEndOf="@id/year_title"
+        app:layout_constraintTop_toTopOf="@+id/year_title" />
 
     <TextView
         android:id="@+id/genre_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dm16"
-        android:text="@string/you_are_search"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln13"
-        app:layout_constraintHorizontal_weight="3"
+        style="@style/allTitleStyle"
         app:layout_constraintBottom_toTopOf="@id/country_title"
-        app:layout_constraintStart_toStartOf="@id/left_guideline"
         app:layout_constraintEnd_toStartOf="@id/genre"
-        />
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <TextView
         android:id="@+id/genre"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:textAlignment="textEnd"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln15"
-        app:layout_constraintHorizontal_weight="7"
+        style="@style/allEndTitleStyle"
         app:layout_constraintBottom_toBottomOf="@id/genre_title"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
-        app:layout_constraintStart_toEndOf="@id/genre_title" />
+        app:layout_constraintStart_toEndOf="@id/genre_title"
+        app:layout_constraintTop_toTopOf="@+id/genre_title" />
 
     <TextView
         android:id="@+id/country_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dm28"
-        android:text="@string/you_are_search"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln13"
-        app:layout_constraintEnd_toStartOf="@id/country"
-        app:layout_constraintHorizontal_weight="3"
+        style="@style/allTitleStyle"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/country"
         app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <TextView
         android:id="@+id/country"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/you_are_search"
-        android:textAlignment="textEnd"
-        android:textAllCaps="false"
-        android:textSize="@dimen/ln15"
-        app:layout_constraintHorizontal_weight="7"
+        style="@style/allEndTitleStyle"
         app:layout_constraintBottom_toBottomOf="@id/country_title"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
-        app:layout_constraintStart_toEndOf="@id/country_title" />
+        app:layout_constraintStart_toEndOf="@id/country_title"
+        app:layout_constraintTop_toTopOf="@+id/country_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
