--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="dm18">16dp</dimen>
     <dimen name="dm21">21dp</dimen>
     <dimen name="dm24">24dp</dimen>
+    <dimen name="dm26">26dp</dimen>
     <dimen name="dm28">28dp</dimen>
     <dimen name="dm30">30dp</dimen>
     <dimen name="dm36">36dp</dimen>
