--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -208,6 +208,7 @@
         <item name="android:background">@null</item>
         <item name="android:padding">@dimen/dm12</item>
         <item name="srcCompat">@drawable/arrow_back</item>
+        <item name="contentDescription">@null</item>
     </style>
 
     <style name="parentAllForTextStyle">
@@ -265,6 +266,7 @@
         <item name="android:clickable">true</item>
         <item name="tint">@color/white</item>
         <item name="android:background">@null</item>
+        <item name="contentDescription">@null</item>
     </style>
 
 </resources>
