--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -226,6 +226,7 @@
         <item name="android:layout_marginTop">@dimen/dm26</item>
         <item name="android:layout_marginBottom">@dimen/dm24</item>
         <item name="layout_constraintDimensionRatio">w, 1:1</item>
+        <item name="contentDescription">@null</item>
     </style>
 
     <style name="parentAllForTextStyle">
@@ -283,6 +284,7 @@
         <item name="android:clickable">true</item>
         <item name="tint">@null</item>
         <item name="android:background">@null</item>
+        <item name="contentDescription">@null</item>
     </style>
 
 </resources>
