--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light_gray">#E6E8EB</color>
     <color name="gray">#AEAFB4</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="looper">#6200EE</color>
 </resources>
