--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dm28">28dp</dimen>
     <dimen name="dm30">30dp</dimen>
     <dimen name="dm36">36dp</dimen>
+    <dimen name="dm44">44dp</dimen>
     <dimen name="dm45">45dp</dimen>
     <dimen name="dm52">52dp</dimen>
     <dimen name="dm54">54dp</dimen>
