--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -82,10 +82,10 @@
         android:layout_marginBottom="@dimen/dm4"
         android:background="@null"
         android:contentDescription="@string/null_string"
+        android:src="@drawable/play_dark"
         app:layout_constraintBottom_toTopOf="@id/duration"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
-        app:layout_constraintStart_toStartOf="@id/left_guideline"
-        app:srcCompat="@drawable/play_dark" />
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <ImageButton
         android:id="@+id/like"
