--- a/app/src/main/res/layout/activity_mediatech.xml
+++ b/app/src/main/res/layout/activity_mediatech.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    style="@style/mediatechLinearLayout"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
+    <!--<androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dm56"
@@ -17,7 +17,29 @@
         app:titleTextAppearance="@style/ToolbarTextAppearance.Title"
         style="@style/mediatechToolBarStyle"
         android:visibility="visible"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints" />-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dm56"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_height="match_parent"
+            android:id="@+id/back_button"
+            style="@style/backButton"
+            android:contentDescription="@null"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            style="@style/SettingsTextViewList"
+            android:fontFamily="@font/ys_text_medium"
+            android:layout_height="match_parent"
+            android:text="@string/title_mediatech"
+            android:textSize="@dimen/ln22" />
+
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
