--- a/app/src/main/res/layout/media_fragment_playlists.xml
+++ b/app/src/main/res/layout/media_fragment_playlists.xml
@@ -8,9 +8,9 @@
         android:id="@+id/button_newPlaylist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/dm24"
         android:layout_gravity="center_horizontal"
-        style="@style/search_buttonUpdate"
+        style="@style/searchButtonUpdateStyle"
         android:text="@string/media_add_new_playlist"
         android:visibility="visible"/>
 
@@ -19,15 +19,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        style="@style/search_nothingFoundImage"
+        style="@style/notFoundStyle"
         android:visibility="visible"
-        android:layout_marginTop="106dp" />
+        android:layout_marginTop="@dimen/dm106" />
 
     <TextView android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        style="@style/media_fragment"
-        android:layout_marginTop="242dp"
+        style="@style/mediaFragmentStyle"
+        android:layout_marginTop="@dimen/dm242"
         android:text="@string/media_playlist_error"/>
 </FrameLayout>
