--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -354,4 +354,28 @@
         <item name="android:textSize">@dimen/ln22</item>
     </style>
 
+    <style name="searchButtonUpdateStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:lineHeight">@dimen/dm16</item>
+        <item name="android:backgroundTint">@color/dark_item</item>
+        <item name="android:paddingHorizontal">@dimen/dm14</item>
+        <item name="android:paddingVertical">@dimen/dm10</item>
+        <item name="android:visibility">gone</item>
+        <item name="cornerRadius">54dp</item>
+    </style>
+
+    <style name="mediaFragmentStyle" >
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="background">@color/white</item>
+        <item name="android:textSize">@dimen/ln19</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="mediatechLinearLayout" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@color/white</item>
+    </style>
+
 </resources>
