--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -285,7 +285,8 @@
         <item name="android:backgroundTint">@color/dark_item</item>
         <item name="tabSelectedTextColor">@color/white</item>
         <item name="tabIndicatorColor">@color/white</item>
-        <item name="android:textSize">14sp</item>
+        <item name="tabTextColor">@color/white</item>
+        <item name="android:textSize">@dimen/ln14</item>
         <item name="android:textAlignment">center</item>
         <item name="tabIndicator">@drawable/tablayout_indicator</item>
         <item name="textAllCaps">false</item>
@@ -297,15 +298,6 @@
         <item name="background">@color/dark_item</item>
         <item name="android:textSize">19sp</item>
         <item name="android:textAlignment">center</item>
-    </style>
-
-    <style name="mediatechToolBarStyle">
-        <item name="theme">@style/ThemeOverlay.AppCompat.Light</item>
-        <item name="android:background">@color/dark_item</item>
-        <item name="android:iconTint">@color/white</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/ys_medium</item>
-        <item name="android:textFontWeight">500</item>
     </style>
 
     <style name="ToolbarTextAppearance">
@@ -343,7 +335,7 @@
     </style>
 
     <style name="mediatechLinearLayout" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:background">@color/black</item>
+        <item name="android:background">@color/dark_item</item>
     </style>
 
 </resources>
