--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -372,4 +372,15 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    -- Style for Navigation bottom menu
+    <style name="bottom_navigation_view" >
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/dark_item</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textSize">@dimen/ln12</item>
+        <item name="android:textAlignment">center</item>
+        <item name="itemIconTint">@drawable/bottom_navigation_tab_bar</item>
+        <item name="itemTextColor">@drawable/bottom_navigation_tab_bar</item>
+    </style>
+
 </resources>
