--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,38 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/BodyStartScreenStyle"
-    tools:context=".ui.main.activity.MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?attr/selectableItemBackground"
-            android:padding="@dimen/dm12">
-
-            <ImageView
-                style="@style/BackButtonImageView"
-                android:layout_gravity="end|center_vertical"
-                android:src="@drawable/arrow_back" />
-
-        </FrameLayout>
-
-        <TextView
-            style="@style/SettingsTextViewList"
-            android:fontFamily="@font/ys_text_medium"
-            android:paddingVertical="@dimen/dm12"
-            android:text="@string/search_title"
-            android:textSize="@dimen/ln22" />
-
-    </LinearLayout>
+    style="@style/BodyStartScreenStyle">
 
     <Space
         android:layout_width="match_parent"
