--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,40 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/BodyStartScreenStyle"
-    tools:context=".ui.main.activity.MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:focusable="true"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            android:padding="@dimen/dm12">
-
-            <ImageView
-                android:id="@+id/back_button"
-                style="@style/BackButtonImageView"
-                android:layout_gravity="end|center_vertical"
-                android:src="@drawable/arrow_back" />
-
-        </FrameLayout>
-
-        <TextView
-            style="@style/SettingsTextViewList"
-            android:fontFamily="@font/ys_text_medium"
-            android:paddingVertical="@dimen/dm12"
-            android:text="@string/settings_title"
-            android:textSize="@dimen/ln22" />
-
-    </LinearLayout>
-
+    style="@style/BodyStartScreenStyle">
 
     <Space
         android:layout_width="match_parent"
