--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -204,6 +204,11 @@
     </style>
 
     -- styles for PlayerActivity
+
+    <style name="PlayerActivityStyle" >
+        <item name="android:background">@color/dark_item</item>
+    </style>
+
     <style name="backButton" parent="BackButtonImageView">
         <item name="android:background">@null</item>
         <item name="android:padding">@dimen/dm12</item>
