--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -274,12 +274,19 @@
         <item name="contentDescription">@null</item>
     </style>
 
-    <style name="audio_player_button_add" >
+    <style name="audio_player_button_add" parent="roundButtonStyle">
         <item name="android:src">@drawable/playlist_add_up</item>
     </style>
 
-    <style name="audio_player_button_like" >
+    <style name="audio_player_button_like">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:contentDescription">@null</item>
+        <item name="android:clickable">true</item>
         <item name="android:src">@drawable/like_up</item>
+        <item name="backgroundTint">@color/gray</item>
+        <item name="android:background">@null</item>
+        <item name="contentDescription">@null</item>
     </style>
 
     -- style for MediaTechActivity
