--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -7,14 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_sheet"
-    android:orientation="vertical"
-    tools:context=".player.ui.PlayerBottomSheetFragment">
+    android:orientation="vertical">
 
     <View
         android:layout_width="50dp"
         android:layout_height="4dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/margin_8"
+        android:layout_marginTop="@dimen/dm8"
         android:layout_marginBottom="30dp"
         android:background="@drawable/rounder" />
 
@@ -23,17 +22,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:fontFamily="@font/ys_display_medium"
-        android:layout_marginBottom="@dimen/margin_4"
+        android:fontFamily="@font/ys_medium"
+        android:layout_marginBottom="@dimen/dm4"
         android:text="@string/add_to_playlist"
-        android:textColor="@color/search_title"
-        android:textSize="@dimen/text_19sp" />
+        android:textColor="@color/dark_item"
+        android:textSize="@dimen/ln19" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/create_playlist_btn"
         style="@style/Button"
         android:layout_gravity="center"
-        android:text="@string/new_playlist"
+        android:text="@string/media_add_new_playlist"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -41,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="5dp"
-        android:layout_marginTop="@dimen/margin_24"
+        android:layout_marginTop="@dimen/dm24"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_playlist_bottom_sheet" />
 </LinearLayout>
