--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -41,7 +41,7 @@
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
-        android:visibility="gone"
+        android:visibility="visible"
         tools:listitem="@layout/grid_item"
         />
 </FrameLayout>
